added stats page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -59,14 +59,14 @@
     <div id="menu" >
         <div class="options">
             <ul class="optionsList">
-                <li>Forest</li>
-                <li>Timeline</li>
-                <li>Tags</li>
-                <li>Friends</li>
-                <li>Achievements</li>
-                <li>Store</li>
-                <li>About</li>
-                <li>Settings</li>
+                <li><a href="">Forest</a></li>
+                <li><a href="">Timeline</a></li>
+                <li><a href="">Tags</a></li>
+                <li><a>Friends</a></li>
+                <li><a>Achievements</a></li>
+                <li><a href="/stats">Stats</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Settings</a></li>
                 <li>
                     <form action="/logout" method="post">
 
