--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -72,6 +72,7 @@ body{
     text-align: center;
     color: blue;
     margin-bottom: 80px;
+    margin-top: 20px;
     display: flex;
     justify-content: space-evenly;
 }
